Bottom navigation added

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -180,6 +180,7 @@
         app:cardBackgroundColor="@color/main"
         android:clickable="true"
         android:focusable="true"
+        android:foreground="?attr/cardForegroundColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
