--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -192,6 +192,7 @@
             android:id="@+id/brandRv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:clipToPadding="false"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="15dp"
             app:layout_constraintEnd_toEndOf="@+id/constraintLayout6"
