--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,19 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="home"
+        android:id="@+id/homeFragment"
         android:title="@string/home"
         android:icon="@drawable/home"/>
     <item
-        android:id="wish"
+        android:id="@+id/wish"
         android:title="@string/wish"
-        android:icon="@drawable/wish"/>
+        android:icon="@drawable/heart"/>
     <item
-        android:id="bag"
+        android:id="@+id/bag"
         android:title="@string/basket"
         android:icon="@drawable/basket"/>
     <item
-        android:id="cart"
+        android:id="@+id/cart"
         android:title="@string/pay"
         android:icon="@drawable/cart"/>
 
